--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 .App {
+  height: 100%;
   text-align: center;
+  position: relative;
 }
 
 .App-logo {
@@ -21,7 +23,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: $theme-color;
 }
 
 .App-link {
